[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/Debug/test.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 25.0
margin_top = 434.0
margin_right = 237.0
margin_bottom = 583.0
text = "Resource"

[node name="Button2" type="Button" parent="."]
margin_left = 273.0
margin_top = 403.0
margin_right = 327.0
margin_bottom = 423.0
text = "Search"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 595, 228 )
scale = Vector2( 0.05, 0.05 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 242.0
margin_top = 540.0
margin_right = 988.0
margin_bottom = 565.0

[node name="TextEdit" type="TextEdit" parent="."]
margin_top = 403.0
margin_right = 271.0
margin_bottom = 423.0
text = "image_path"

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 6.0
margin_top = 21.0
margin_right = 404.0
margin_bottom = 366.0
window_title = "Abrir un Archivo"
resizable = true
mode = 0
show_hidden_files = true

[node name="Button3" type="Button" parent="."]
margin_left = 251.0
margin_top = 488.0
margin_right = 911.0
margin_bottom = 524.0
text = "Send To Servers"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
